--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-masked-view/masked-view": "0.2.7",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -21,7 +23,10 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-date-picker": "^4.2.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-image-modal": "^1.0.16",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-paper": "^5.0.0-rc.9",
     "react-native-reanimated": "~2.9.1",
     "react-native-reanimated-carousel": "^3.1.5",
@@ -29,8 +34,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.6",
-    "@react-native-masked-view/masked-view": "0.2.7"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
