--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-select-dropdown": "^3.0.3",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6"
